terraform2/internet_gateway.tf
# Internet Gateway
resource "aws_internet_gateway" "main" {
  vpc_id = "${aws_vpc.main.id}"

  tags = {
    Name = "pf-igw"
  }
}
